[package]
name = "mys-indexer-alt-schema"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
diesel = {workspace = true, features = ["postgres_backend", "chrono"]}
diesel_migrations.workspace = true
serde.workspace = true
bcs.workspace = true

mys-field-count.workspace = true
mys-protocol-config.workspace = true
mys-types.workspace = true
