[package]
name = "mys-indexer"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
rand = "0.8.5"
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bb8 = "0.8.5"
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
csv.workspace = true
diesel = { workspace = true, features = ["chrono", "serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres", "async-connection-wrapper"] }
futures.workspace = true
hex.workspace = true
indicatif.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
object_store.workspace = true
prometheus.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
strum_macros.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
url.workspace = true

fastcrypto = { workspace = true, features = ["copy_key"] }
mysten-metrics.workspace = true
simulacrum.workspace = true
mys-config.workspace = true
mys-archival.workspace = true
mys-core.workspace = true
mys-data-ingestion-core.workspace = true
mys-json.workspace = true
mys-json-rpc.workspace = true
mys-json-rpc-api.workspace = true
mys-json-rpc-types.workspace = true
mys-open-rpc.workspace = true
mys-pg-db.workspace = true
mys-sdk.workspace = true
mys-snapshot.workspace = true
mys-storage.workspace = true
mys-types.workspace = true
mys-package-resolver.workspace = true
mys-protocol-config.workspace = true
telemetry-subscribers.workspace = true
mys-rpc-api.workspace = true
mys-transaction-builder.workspace = true
mys-synthetic-ingestion.workspace = true

move-core-types.workspace = true
move-bytecode-utils.workspace = true
move-binary-format.workspace = true

diesel_migrations.workspace = true
cached.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true

[dev-dependencies]
mys-keys.workspace = true
mys-move-build.workspace = true
mys-swarm-config.workspace = true
mys-test-transaction-builder.workspace = true
test-cluster.workspace = true
ntest.workspace = true
criterion.workspace = true

[[bin]]
name = "mys-indexer"
path = "src/main.rs"
