[package]
name = "mys-json-rpc-api"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
jsonrpsee.workspace = true
once_cell.workspace = true
prometheus.workspace = true
tap.workspace = true
tracing.workspace = true
fastcrypto.workspace = true
mysten-metrics.workspace = true
mys-json.workspace = true
mys-json-rpc-types.workspace = true
mys-open-rpc.workspace = true
mys-open-rpc-macros.workspace = true
mys-types.workspace = true

# NOTE: It's important to keep the above dependency list short.
# This and the mys-sdk crate are widely used to develop on MySocial and it's valuable
# to not have to pull in the entire mys repo for it.

[dev-dependencies]
