[package]
name = "mys-json-rpc-tests"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
move-package.workspace = true
move-core-types.workspace = true
mys-config.workspace = true
mys-core.workspace = true
mys-keys.workspace = true
mys-move-build.workspace = true
mys-test-transaction-builder.workspace = true
mys-sdk.workspace = true
mys-macros.workspace = true
mys-simulator.workspace = true
mys-json.workspace = true
mys-json-rpc.workspace = true
mys-json-rpc-api.workspace = true
mys-json-rpc-types.workspace = true
mys-open-rpc.workspace = true
mys-open-rpc-macros.workspace = true
mys-protocol-config.workspace = true
mys-swarm-config.workspace = true
mys-types.workspace = true
test-cluster.workspace = true
telemetry-subscribers.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
shared-crypto.workspace = true
