[package]
name = "mys-light-client"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mys-light-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
clap.workspace = true
move-core-types.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
serde_yaml.workspace = true
serde_json.workspace = true
mys-types.workspace = true
mys-config.workspace = true
mys-rpc-api.workspace = true
mys-sdk.workspace = true
move-binary-format.workspace = true
mys-json-rpc-types.workspace = true
mys-package-resolver.workspace = true
url.workspace = true
reqwest.workspace = true
object_store.workspace = true
env_logger = "0.11.5"
log = "0.4.22"
