[package]
name = "mys-network"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
governor.workspace = true
serde.workspace = true
tonic.workspace = true
dashmap.workspace = true
tower.workspace = true
shared-crypto.workspace = true

mys-archival.workspace = true
mys-macros.workspace = true
mys-storage.workspace = true
mys-types.workspace = true
mys-config.workspace = true
mys-swarm-config.workspace = true

arc-swap.workspace = true
bcs.workspace = true
bytes.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true
tap.workspace = true
rand.workspace = true
anyhow.workspace = true
prometheus.workspace = true
mysten-metrics.workspace = true

[build-dependencies]
anemo-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
mys-macros.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["test-util"] }
ed25519-consensus.workspace = true
tempfile = "3.3.0"
