[package]
name = "mys-package-management"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

mys-json-rpc-types.workspace = true
mys-sdk.workspace = true
mys-types.workspace = true

move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
