[package]
name = "mys-rosetta"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
once_cell.workspace = true
signature.workspace = true
bcs.workspace = true
hyper.workspace = true
strum.workspace = true
strum_macros.workspace = true
async-trait.workspace = true
clap.workspace = true
thiserror.workspace = true
eyre.workspace = true
typed-store.workspace = true
tempfile.workspace = true
fastcrypto.workspace = true
mys-swarm-config.workspace = true
mys-types.workspace = true
mys-sdk.workspace = true
mys-node.workspace = true
mys-config.workspace = true
mys-keys.workspace = true
mys-json-rpc-types.workspace = true
mysten-metrics.workspace = true
shared-crypto.workspace = true
lru.workspace = true

move-core-types.workspace = true

telemetry-subscribers.workspace = true

[dev-dependencies]
mys-sdk.workspace = true
mys-move-build.workspace = true
test-cluster.workspace = true
tempfile.workspace = true
rand.workspace = true
reqwest.workspace = true
move-cli.workspace = true
quick-js = "0.4.1"
