[package]
name = "mys-simulator"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
move-package.workspace = true
mysten-network.workspace = true
mys-framework.workspace = true
mys-move-build.workspace = true
mys-types.workspace = true
tempfile.workspace = true
tracing.workspace = true
anemo.workspace = true
anemo-tower.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
telemetry-subscribers.workspace = true
tower.workspace = true
lru.workspace = true
rand.workspace = true
serde.workspace = true
bcs.workspace = true

[target.'cfg(msim)'.dependencies]
msim.workspace = true
