[package]
name = "mys-single-node-benchmark"
version.workspace = true
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
mys-config.workspace = true
mys-core.workspace = true
mys-move-build.workspace = true
mys-test-transaction-builder.workspace = true
mys-transaction-checks.workspace = true
mys-types.workspace = true
mys-storage.workspace = true

async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
fs_extra.workspace = true
futures.workspace = true
prometheus.workspace = true
once_cell.workspace = true
serde = { version = "1.0.190", features = ["derive"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tracing.workspace = true

[dev-dependencies]
mys-macros.workspace = true
mys-protocol-config.workspace = true
mys-simulator.workspace = true
