[package]
name = "mys-source-validation-service"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mys-source-validation-service"

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
clap.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
tempfile = "3.3.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { version = "0.7.4", features = ["preserve_order"] }
tracing = "0.1.36"
serde = { version = "1.0.144", features = ["derive"] }
url = "2.3.1"

mys-move.workspace = true
mys-move-build.workspace = true
mys-sdk.workspace = true
mys-source-validation.workspace = true

axum.workspace = true
bin-version.workspace = true
move-package.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-symbol-pool.workspace = true
mysten-metrics.workspace = true
prometheus.workspace = true
telemetry-subscribers.workspace = true
tower.workspace = true
tower-http.workspace = true

[dev-dependencies]
expect-test = "1.4.0"
fs_extra = "1.3.0"
reqwest.workspace = true

mys.workspace = true
mys-move.workspace = true
mys-json-rpc-types.workspace = true
test-cluster.workspace = true
