[package]
name = "mys-swarm-config"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

move-bytecode-utils.workspace = true
shared-crypto.workspace = true
mys-config.workspace = true
mys-macros.workspace = true
mys-protocol-config.workspace = true
mys-types.workspace = true
mys-genesis-builder.workspace = true
mys-rpc-api.workspace = true

[target.'cfg(msim)'.dependencies]
mys-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

mys-execution.workspace = true
