[package]
name = "mys-swarm"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rand.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
tempfile.workspace = true
tonic-health.workspace = true
tap.workspace = true
prometheus.workspace = true

mys-config.workspace = true
mys-swarm-config.workspace = true
mys-macros.workspace = true
mys-node.workspace = true
mys-protocol-config.workspace = true
mys-tls.workspace = true
mys-types.workspace = true
mysten-metrics.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true

[target.'cfg(msim)'.dependencies]
mys-simulator.workspace = true

